--- a/wp-content/themes/romulo1/assets/styles/less/style.less
+++ b/wp-content/themes/romulo1/assets/styles/less/style.less
@@ -4,6 +4,8 @@
 @import 'mixins/mixins';
 @import 'variables/variables';
 
+@import 'theme/theme';
+
 @import 'main/320';
 @media screen and (min-width: 768px) { @import 'main/768'; }
 @media screen and (min-width : 1024px) { @import 'main/1024'; }
