menu quase pronto, faltam efeitos em jquery

--- a/wp-content/themes/romulo1/assets/styles/less/main/768.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/768.less
@@ -13,17 +13,17 @@ header
 				
 			}
 		}
-		.box-menu
+		.box-btn-menu
 		{
-			
+	
 			.btn-menu-mobile
 			{
 				
 			}
-			.menu
-			{
-				
-			}
+		}
+		.menu
+		{
+			
 		}
 	}
 }
