menu 768 1024 sem submenu

--- a/wp-content/themes/romulo1/assets/styles/less/main/320.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/320.less
@@ -38,29 +38,34 @@ header
 			}
 		}
 	}
-	.menu
+	.container-menu
 	{
-		/*background-color: rgba(255,255,255, 0.3);*/
-		padding: 0;
-	    margin: 0;
-	    position: relative;
-	    display: none;
-	    float: left;
-	    width: 100%;
-	    text-align: center;
-	    background-color: white;
-	    color: black;
-	    .menu-item{
-	    	/*margin: 15px 0;*/
-	    	padding: 20px 0;
-	    	a{
-	    		text-decoration: none;
-	    		color: black;
-	    		font-size: 1.5em;
-	    	}
-	    	.sub-menu{
-	    		display: none;
-	    	}
-	    }
+		.menu
+		{
+			/*background-color: rgba(255,255,255, 0.3);*/
+			padding: 0;
+		    margin: 0;
+		    position: relative;
+		    display: none;
+		    float: left;
+		    width: 100%;
+		    text-align: center;
+		    background-color: white;
+		    color: black;
+		    .menu-item
+		    {
+		    	padding: 20px 0;
+		    	a
+		    	{
+		    		text-decoration: none;
+		    		color: black;
+		    		font-size: 1.5em;
+		    	}
+		    	.sub-menu
+		    	{
+		    		display: none;
+		    	}
+		    }
+		}
 	}
 }
