--- a/wp-content/themes/romulo1/assets/styles/less/main/320.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/320.less
@@ -58,7 +58,7 @@ header
 		    	a
 		    	{
 		    		text-decoration: none;
-		    		color: black;
+		    		color: #4F4F4F;
 		    		font-size: 1.5em;
 		    	}
 		    	.sub-menu
