menu quase pronto - faltam icones

--- a/wp-content/themes/romulo1/assets/styles/less/main/320.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/320.less
@@ -52,14 +52,18 @@ header
 		    text-align: center;
 		    background-color: white;
 		    color: black;
+		    list-style-type: none;
 		    .menu-item
 		    {
-		    	padding: 20px 0;
+		    	/*padding: 20px 0;*/
 		    	a
 		    	{
+		    		padding: 20px 0;
 		    		text-decoration: none;
 		    		color: #4F4F4F;
 		    		font-size: 1.5em;
+		    		position: relative;
+		    		display: block;
 		    	}
 		    	.sub-menu
 		    	{
