header quase ok falta apenas logo original

--- a/wp-content/themes/romulo1/assets/styles/less/main/768.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/768.less
@@ -40,9 +40,14 @@ header
 		    		font-size: 1em;
 		    		color: #777;
 		    		letter-spacing: 0.1em;
+					-webkit-transition: all .5s;
+					-moz-transition: all .5s;
+					-ms-transition: all .5s;
+					-o-transition: all .5s;
+					transition: all .5s;
 		    		&:hover
 		    		{
-		    			color: #333;
+		    			color: #6f5499;
 		    			text-decoration: underline;
 		    			background-color: #EEE;
 		    		}
