--- a/wp-content/themes/romulo1/assets/styles/less/main/320.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/320.less
@@ -8,6 +8,7 @@ header
 	/*background-color: rgba(255,255,255, 0.3);*/
 	width: 100%;
 	height: 100px;
+	box-shadow: 0 1px 10px #000;
 	.container-header
 	{
 		.column(12);
@@ -51,7 +52,7 @@ header
 		    width: 100%;
 		    text-align: center;
 		    background-color: white;
-		    color: black;
+		    color: #6f5499;
 		    list-style-type: none;
 		    .menu-item
 		    {
@@ -60,7 +61,7 @@ header
 		    	{
 		    		padding: 20px 0;
 		    		text-decoration: none;
-		    		color: #4F4F4F;
+		    		color: #6f5499;
 		    		font-size: 1.5em;
 		    		position: relative;
 		    		display: block;
@@ -72,4 +73,15 @@ header
 		    }
 		}
 	}
+}
+
+footer
+{
+	position: relative;
+	display: block;
+	float: left;
+	background-color: #2a2730;
+	width: 100%;
+	height:50px;
+	bottom:0;
 }
