--- a/wp-content/themes/romulo1/assets/styles/less/main/768.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/768.less
@@ -9,6 +9,8 @@ header
 			.column(12);
 			img
 			{
+				left: 35%;
+				/*cor para logo 77DD77*/
 			}
 		}
 		.box-btn-menu
@@ -40,6 +42,7 @@ header
 		    		font-size: 1em;
 		    		color: #777;
 		    		letter-spacing: 0.1em;
+					font-weight: 600;
 					-webkit-transition: all .5s;
 					-moz-transition: all .5s;
 					-ms-transition: all .5s;
@@ -47,7 +50,8 @@ header
 					transition: all .5s;
 		    		&:hover
 		    		{
-		    			color: #6f5499;
+		    			//color: #6f5499;
+						color: #77c124;
 		    			text-decoration: underline;
 		    			background-color: #EEE;
 		    		}
@@ -98,11 +102,12 @@ header
 					padding: 0;
 					margin: 0;
 					background-color: white;
-					border-radius: 10px;
-					box-shadow: 0px 0px 7px black;
+					border-radius: 6px;
+					box-shadow: 0px 0px 5px black;
 					top: 80px;
     				right: 200px;
     				list-style-type: none;
+					z-index: 11;
 					.menu-item
 					{
 						/*width: 100%;
@@ -124,8 +129,8 @@ header
 		    				{
 		    					&:hover
 			    				{
-			    					border-top-left-radius: 10px;
-			    					border-top-right-radius: 10px;
+			    					border-top-left-radius: 6px;
+			    					border-top-right-radius: 6px;
 			    				}
 		    				}
 		    				
@@ -136,8 +141,8 @@ header
 		    				{
 		    					&:hover
 			    				{
-			    					border-bottom-left-radius: 10px;
-			    					border-bottom-right-radius: 10px;
+			    					border-bottom-left-radius: 6px;
+			    					border-bottom-right-radius: 6px;
 			    				}
 		    				}
 		    			}
