--- a/wp-content/themes/romulo1/assets/styles/less/theme/theme.less
+++ b/wp-content/themes/romulo1/assets/styles/less/theme/theme.less
@@ -1,3 +1,34 @@
 html, body{
 	font-family: 'Ubuntu', sans-serif;
 }
+
+/* INICIO -  Esquema para deixar o footer sempre no fim da pagina. */
+
+html, body {
+	height: 100%;
+	margin-bottom: -18px; /* gambiarra */
+}
+
+#all {
+	min-height: 100%;
+}
+
+* html #all {
+	height: 100%; /* hack para IE6 que trata height como min-height */
+}
+
+#all {
+	position: relative;
+}
+
+#bottom {
+	position: absolute;
+	/*bottom: 0;*/
+	bottom: 0px;
+}
+
+#content {
+	padding-bottom: 50px; /*Tamanho do footer*/
+}
+
+/* FIM - Esquema para deixar o footer sempre no fim da pagina. */
