footer com links de redes sociais

--- a/wp-content/themes/romulo1/assets/styles/less/main/768.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/768.less
@@ -103,7 +103,8 @@ header
 					margin: 0;
 					background-color: white;
 					border-radius: 6px;
-					box-shadow: 0px 0px 5px black;
+					/*box-shadow: 0px 0px 5px black;*/
+					box-shadow: 0px 0px 10px #aaa;
 					top: 80px;
     				right: 200px;
     				list-style-type: none;
