--- a/wp-content/themes/romulo1/assets/styles/less/main/320.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/320.less
@@ -86,6 +86,128 @@ footer
 	width: 100%;
 	height:50px;
 	bottom:0;
+	.container-desenvolvido
+	{
+		.column(4);
+	}
+	.container-contato
+	{
+		.column(4);
+	}
+	.container-icons
+	{
+		.column(4);
+		.component
+		{
+			text-align: center;
+			.icon
+			{
+				display: inline-block;
+				vertical-align: top;
+				overflow: hidden;
+				margin: 5px;
+				width: 40px;
+				height: 40px;
+				font-size: 0;
+				text-indent: -9999px;
+			}
+			.icon-cube
+			{
+				position: relative;
+				-webkit-perspective: 800px;
+				perspective: 800px;
+				overflow: visible;
+				&::before
+				{
+					z-index: 2;
+					background-color: #595959;
+					display: block;
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+					background: url("imgs/icons/icons5.png");
+					background-image: url("imgs/icons/icons5.svg"), none;
+					content: "";
+					-webkit-transition: all 0.3s;
+					transition: all 0.3s;
+					background-size: 230px;
+				}
+				&::after
+				{
+					z-index: 1;
+					opacity: 0;
+					-webkit-transform: translateY(22px) rotateX(-90deg);
+					transform: translateY(22px) rotateX(-90deg);
+					display: block;
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+					background: url("imgs/icons/icons5.png");
+					background-image: url("imgs/icons/icons5.svg"), none;
+					content: "";
+					-webkit-transition: all 0.3s;
+					transition: all 0.3s;
+					background-size: 230px;
+				}
+				&:hover
+				{
+					&::before
+					{
+						opacity: 0;
+						-webkit-transform: translateY(-22px) rotateX(90deg);
+						transform: translateY(-22px) rotateX(90deg);
+					}
+					&::after
+					{
+						opacity: 1;
+						-webkit-transform: rotateX(0);
+						transform: rotateX(0);
+					}
+				}
+				&.facebook
+				{
+					&::before
+					{
+						background-position: -2px -2px;
+					}
+					&::after
+					{
+						background-position: -2px -2px;
+						background-color: #3b5998;
+					}
+				}
+				&.twitter
+				{
+					&::before
+					{
+						background-position: -49px -2px;
+					}
+					&::after
+					{
+						background-position: -49px -2px;
+						background-color: #4099ff;
+					}
+				}
+				&.github
+				{
+					&::before
+					{
+						background-position: -371px -2px;
+					}
+					&::after
+					{
+						background-position: -371px -2px;
+						/*background-color: #333333;*/
+						background-color: #77c124;
+					}
+				}
+			}
+		}
+	}
 }
 
 section
