sem text-decoration

--- a/wp-content/themes/romulo1/assets/styles/less/main/768.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/768.less
@@ -52,7 +52,7 @@ header
 		    		{
 		    			//color: #6f5499;
 						color: #77c124;
-		    			text-decoration: underline;
+		    			/*text-decoration: underline;*/
 		    			background-color: #EEE;
 		    		}
 		    	}
