--- a/wp-content/themes/romulo1/assets/styles/less/main/1024.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/1024.less
@@ -27,3 +27,68 @@ header
 		}
 	}
 }
+
+footer
+{
+	position: absolute;
+	.container-desenvolvido
+	{
+	}
+	.container-contato
+	{
+	}
+	.container-icons
+	{
+		.component
+		{
+			.icon
+			{
+			}
+			.icon-cube
+			{
+				&::before
+				{
+				}
+				&::after
+				{
+				}
+				&:hover
+				{
+					&::before
+					{
+					}
+					&::after
+					{
+					}
+				}
+				&.facebook
+				{
+					&::before
+					{
+					}
+					&::after
+					{
+					}
+				}
+				&.twitter
+				{
+					&::before
+					{
+					}
+					&::after
+					{
+					}
+				}
+				&.github
+				{
+					&::before
+					{
+					}
+					&::after
+					{
+					}
+				}
+			}
+		}
+	}
+}
