--- a/wp-content/themes/romulo1/assets/styles/less/main/768.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/768.less
@@ -153,3 +153,79 @@ header
 		}
 	}
 }
+
+footer
+{
+	height:50px;
+	.container-desenvolvido
+	{
+		.column(5);
+		p
+		{
+			margin: 18px 0;
+		}
+	}
+	.container-contato
+	{
+		.column(3);
+		p
+		{
+			margin: 18px 0;
+		}
+	}
+	.container-icons
+	{
+		.column(4);
+		.component
+		{
+			.icon
+			{
+			}
+			.icon-cube
+			{
+				&::before
+				{
+				}
+				&::after
+				{
+				}
+				&:hover
+				{
+					&::before
+					{
+					}
+					&::after
+					{
+					}
+				}
+				&.facebook
+				{
+					&::before
+					{
+					}
+					&::after
+					{
+					}
+				}
+				&.twitter
+				{
+					&::before
+					{
+					}
+					&::after
+					{
+					}
+				}
+				&.github
+				{
+					&::before
+					{
+					}
+					&::after
+					{
+					}
+				}
+			}
+		}
+	}
+}
