--- a/wp-content/themes/romulo1/assets/styles/less/main/320.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/320.less
@@ -55,6 +55,8 @@ header
 		    background-color: white;
 		    color: #6f5499;
 		    list-style-type: none;
+			box-shadow: 0 1px 10px #ddd;
+			z-index: 9;
 		    .menu-item
 		    {
 		    	/*padding: 20px 0;*/
@@ -84,19 +86,23 @@ footer
 	float: left;
 	background-color: #2a2730;
 	width: 100%;
-	height:50px;
+	height: 125px;
 	bottom:0;
+	font-size: 0.75em;
+	color: #77c124;
 	.container-desenvolvido
 	{
-		.column(4);
+		.column(12);
+		text-align: center;
 	}
 	.container-contato
 	{
-		.column(4);
+		.column(12);
+		text-align: center;
 	}
 	.container-icons
 	{
-		.column(4);
+		.column(12);
 		.component
 		{
 			text-align: center;
