refinamento do header com otimizacao SEO

--- a/wp-content/themes/romulo1/assets/styles/less/main/320.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/320.less
@@ -18,10 +18,22 @@ header
 		{
 			.column(9);
 			height: 100px;
-			img
+			.nome-logo
 			{
 				position: relative;
 				display: block;
+				width: 180px;
+				text-align: center;
+				float: none;
+				margin: 18px auto;
+				color: #77c124;
+				font-size: 1.8em;
+				font-weight: 600;
+			}
+			.imagem-logo
+			{
+				position: relative;
+				display: none;
 				float: none;
 				max-height: 80px;
 				margin: 36px auto;
