--- a/wp-content/themes/romulo1/assets/styles/less/main/768.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/768.less
@@ -7,10 +7,13 @@ header
 		.box-logo
 		{
 			.column(12);
-			img
+			.nome-logo
 			{
 				left: 35%;
-				/*cor para logo 77DD77*/
+			}
+			.imagem-logo
+			{
+				left: 35%;
 			}
 		}
 		.box-btn-menu
@@ -53,7 +56,8 @@ header
 		    			//color: #6f5499;
 						color: #77c124;
 		    			/*text-decoration: underline;*/
-		    			background-color: #EEE;
+						background-color: #EEE;
+						box-shadow: 0px 1px 10px #EEE;
 		    		}
 		    	}
 		    	// Botão do menu com submenu.
