--- a/wp-content/themes/romulo1/assets/styles/less/main/768.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/768.less
@@ -1,6 +1,53 @@
 /* HEADER */
 header
 {
+	&.slim
+	{
+		background-color: white;
+		.container-header
+		{
+			.box-logo
+			{
+				.nome-logo
+				{
+				}
+				.imagem-logo
+				{
+					margin: 16px auto;
+				}
+			}
+			.box-btn-menu
+			{
+				.btn-menu-mobile
+				{
+				}
+			}
+		}
+		.container-menu
+		{
+			.menu
+			{
+				.menu-item
+				{
+					a
+					{
+						padding: 18px 0 14px;
+					}
+					&.menu-item-has-children
+					{
+						a
+						{
+							padding: 8px 0 14px;
+						}
+					}
+					.sub-menu
+					{
+						top: 45px;
+					}
+				}
+			}
+		}
+	}
 	.container-header
 	{
 		.column(3);
@@ -13,6 +60,7 @@ header
 			}
 			.imagem-logo
 			{
+				margin: 36px auto;
 				left: 35%;
 			}
 		}
