--- a/wp-content/themes/romulo1/assets/styles/less/main/320.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/320.less
@@ -5,16 +5,23 @@ header
 	display: block;
 	float: left;
 	background-color: white;
-	/*background-color: rgba(255,255,255, 0.3);*/
+	/*background-color: rgba(255,255,255, 0.03);*/
 	width: 100%;
 	height: 100px;
 	box-shadow: 0 1px 10px #ddd;
-	z-index: 10;
+	-webkit-box-shadow: 0 1px 10px blur #ddd;
+	-moz-box-shadow: 0 1px 10px blur #ddd;
+	box-shadow: 0 1px 10px blur #ddd;
+	z-index: 11;
 	transition: all 0.5s ease;
 	&.slim
 	{
 		height: 50px;
 		background-color: #2a2730;
+		box-shadow: 0 1px 10px #222;
+		-webkit-box-shadow: 0 1px 10px blur #222;
+		-moz-box-shadow: 0 1px 10px blur #222;
+		box-shadow: 0 1px 10px blur #222;
 		.container-header
 		{
 			height: 50px;
@@ -45,21 +52,24 @@ header
 	{
 		.column(12);
 		height: 100px;
+		transition: all 0.5s ease;
 		.box-logo
 		{
 			.column(9);
 			height: 100px;
+			transition: all 0.5s ease;
 			.nome-logo
 			{
 				position: relative;
 				display: block;
-				width: 180px;
+				width: 210px;
 				text-align: center;
 				float: none;
-				margin: 18px auto;
+				margin: 35px auto;
 				color: #77c124;
-				font-size: 1.8em;
-				font-weight: 600;
+				font-size: 1.5em;
+				font-weight: 100;
+				transition: all 0.5s ease;
 			}
 			.imagem-logo
 			{
@@ -69,6 +79,7 @@ header
 				max-height: 80px;
 				margin: 15px auto;
 				width: 130px;
+				transition: all 0.5s ease;
 			}
 		}
 		.box-btn-menu
@@ -81,6 +92,7 @@ header
 			    float: none;
 			    max-width: 50px;
 			    margin: 25px auto;
+				transition: all 0.5s ease;
 			}
 		}
 	}
