--- a/wp-content/themes/romulo1/assets/styles/less/main/768.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/768.less
@@ -50,6 +50,14 @@ header
 						{
 							color: #777;
 							padding: 8px 0 14px;
+							&::after
+							{
+								background-image: url(imgs/icons/arrow-down-slim.png);
+							}
+							&:hover
+							{
+								background-color: #dddddd;
+							}
 						}
 					}
 					.sub-menu
