--- a/wp-content/themes/romulo1/assets/styles/less/main/320.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/320.less
@@ -283,3 +283,45 @@ section
 		overflow-x: hidden;
 	}
 }
+
+.dashicons-id
+{
+	background: url('imgs/icons/sprite.png') no-repeat -105px -168px;
+	width: 16px;
+	height: 11px;
+	position: absolute;
+	display: block;
+	left: 10%;
+	top: 27px;
+}
+
+.dashicons-testimonial
+{
+	background: url('imgs/icons/sprite.png') no-repeat -136px -135px;
+	width: 16px;
+	height: 17px;
+	position: absolute;
+	display: block;
+	left: 10%;
+	top: 27px;
+}
+
+.dashicons-portfolio
+{
+	background: url('imgs/icons/sprite.png') no-repeat -8px -167px;
+	width: 16px;
+	height: 17px;
+	position: absolute;
+	display: block;
+	left: 10%;
+	top: 24px;
+}
+
+.sprite
+{
+
+
+
+
+
+}
