--- a/wp-content/themes/romulo1/assets/styles/less/main/768.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/768.less
@@ -43,6 +43,26 @@ header
 						{
 							background-color: #dddddd;
 						}
+						.dashicons-id
+						{
+							display: block;
+							top: 21px;
+							left: 15%;
+						}
+
+						.dashicons-testimonial
+						{
+							display: block;
+							top: 19px;
+							left: 10%;
+						}
+
+						.dashicons-portfolio
+						{
+							display: block;
+							top: 17px;
+							left: 10%;
+						}
 					}
 					&.menu-item-has-children
 					{
@@ -57,6 +77,26 @@ header
 							&:hover
 							{
 								background-color: #dddddd;
+							}
+							.dashicons-format-status
+							{
+								background: url('imgs/icons/sprite.png') no-repeat -264px -40px;
+								width: 16px;
+								height: 15px;
+								position: absolute;
+								display: block;
+								left: 6%;
+								top: 18px;
+							}
+							.dashicons-book-alt
+							{
+								background: url('imgs/icons/sprite.png') no-repeat -266px -231px;
+								width: 12px;
+								height: 17px;
+								position: absolute;
+								display: block;
+								left: 7%;
+								top: 15px;
 							}
 						}
 					}
@@ -134,6 +174,20 @@ header
 						opacity: 1;
 						box-shadow: 0px 1px 10px #EEE;
 		    		}
+					.dashicons-id
+					{
+						display: none;
+					}
+
+					.dashicons-testimonial
+					{
+						display: none;
+					}
+
+					.dashicons-portfolio
+					{
+						display: none;
+					}
 		    	}
 		    	// Botão do menu com submenu.
 		    	&.menu-item-has-children
@@ -324,3 +378,4 @@ footer
 		}
 	}
 }
+
