alguns ajustes para o layout da pagina info (pagina inicial)

--- a/wp-content/themes/romulo1/assets/styles/less/main/320.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/320.less
@@ -317,11 +317,42 @@ section
 	top: 24px;
 }
 
-.sprite
+.flexslider-custom
 {
+	margin-bottom: 0 !important;
+}
 
-
-
-
-
+.pagina-principal
+{
+	position: relative;
+	display: block;
+	float: none;
+	margin: 0 auto 30px;
+	width: 90%;
+	h2
+	{
+		position: relative;
+		display: block;
+		float: left;
+		width: 100%;
+		text-align: center;
+		font-size: 2em;
+		color: #555;
+		margin-bottom: 5px;
+	}
+	h3
+	{
+		color: #64C4D2;
+		position: relative;
+		display: block;
+		float: left;
+		text-align: center;
+		width: 100%;
+		margin-top: 0;
+	}
+	p
+	{
+		font-size: 1.2em;
+		color: #555;
+	}
 }
