--- a/wp-content/themes/romulo1/assets/styles/less/main/768.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/768.less
@@ -300,7 +300,12 @@ section
 	.conteudo-posts
 	{
 		margin-top: 0;
+		.flexslider-custom
+		{
+			display: block !important;
+		}
 	}
+
 }
 
 footer
@@ -375,6 +380,34 @@ footer
 					}
 				}
 			}
+		}
+	}
+}
+
+.pagina-principal
+{
+	h2
+	{
+	}
+	h3
+	{
+	}
+	.container-texto-perfil
+	{
+		.column(6);
+		p
+		{
+			margin-top:0;
+			font-size: 1.6em;
+			line-height: 1.6;
+		}
+	}
+	.container-img-perfil
+	{
+		.column(6);
+		img
+		{
+			margin-top: 6px;
 		}
 	}
 }
