fix problem with menu in 768 resolutions

--- a/wp-content/themes/romulo1/assets/styles/less/main/768.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/768.less
@@ -45,21 +45,21 @@ header
 						}
 						.dashicons-id
 						{
-							display: block;
+							display: none;
 							top: 21px;
 							left: 15%;
 						}
 
 						.dashicons-testimonial
 						{
-							display: block;
+							display: none;
 							top: 19px;
 							left: 10%;
 						}
 
 						.dashicons-portfolio
 						{
-							display: block;
+							display: none;
 							top: 17px;
 							left: 10%;
 						}
