--- a/wp-content/themes/romulo1/assets/styles/less/main/1024.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/1024.less
@@ -1,29 +1,177 @@
 /* HEADER */
 header
 {
+	&.slim
+	{
+		.container-header
+		{
+			.box-logo
+			{
+				.nome-logo
+				{
+				}
+				.imagem-logo
+				{
+				}
+			}
+			.box-btn-menu
+			{
+				.btn-menu-mobile
+				{
+				}
+			}
+		}
+		.container-menu
+		{
+			.menu
+			{
+				.menu-item
+				{
+					a
+					{
+						&:hover
+						{
+						}
+						.dashicons-id
+						{
+							display: block;
+						}
 
+						.dashicons-testimonial
+						{
+							display: block;
+						}
+
+						.dashicons-portfolio
+						{
+							display: block;
+						}
+					}
+					&.menu-item-has-children
+					{
+						a
+						{
+							&::after
+							{
+							}
+							&:hover
+							{
+							}
+							.dashicons-format-status
+							{
+							}
+							.dashicons-book-alt
+							{
+							}
+						}
+					}
+					.sub-menu
+					{
+						top: 45px;
+					}
+				}
+			}
+		}
+	}
 	.container-header
 	{
-		
 		.box-logo
 		{
-			
-			img
+			.nome-logo
 			{
-				
+			}
+			.imagem-logo
+			{
 			}
 		}
 		.box-btn-menu
 		{
-			
 			.btn-menu-mobile
 			{
-				
 			}
 		}
+	}
+	.container-menu
+	{
 		.menu
 		{
-			
+			.menu-item{
+				// Botão do menu sem submenu.
+				a
+				{
+					&:hover
+					{
+					}
+					.dashicons-id
+					{
+					}
+
+					.dashicons-testimonial
+					{
+					}
+
+					.dashicons-portfolio
+					{
+					}
+				}
+				// Botão do menu com submenu.
+				&.menu-item-has-children
+				{
+					a
+					{
+						&::after
+						{
+						}
+						&:hover
+						{
+							&::after
+							{
+							}
+						}
+					}
+					&:hover
+					{
+						.sub-menu
+						{
+						}
+					}
+				}
+				.sub-menu
+				{
+					.menu-item
+					{
+						a
+						{
+							&::after
+							{
+							}
+							&:hover
+							{
+							}
+
+						}
+						&:nth-child(1)
+						{
+							a
+							{
+								&:hover
+								{
+								}
+							}
+
+						}
+						&:nth-child(2)
+						{
+							a
+							{
+								&:hover
+								{
+								}
+							}
+						}
+					}
+				}
+			}
 		}
 	}
 }
