--- a/wp-content/themes/romulo1/assets/styles/less/main/320.less
+++ b/wp-content/themes/romulo1/assets/styles/less/main/320.less
@@ -332,7 +332,7 @@ section
 						display: block;
 						padding: 0 15px;
 						margin: 25px 0 0;
-						color: #777;git add -
+						color: #777;
 						&:nth-child(2){
 							margin-top:0;
 						}
